change footer, header etc.

--- a/release/ClientApp/public/index.html
+++ b/release/ClientApp/public/index.html
@@ -8,17 +8,16 @@
     />  
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-      crossorigin="anonymous"
+      href="../src/assets/css/bootstrap.min.css"
     />
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
     <meta name="yandex-verification" content="b35ed3e455dabf56" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
+    <meta name="keywords" content="двери витебск, входные двери витебск, team belchik, двери экошпон, двери оптом, окна витебск, окна пвх, фурнитура, двери team belchik">
     <meta name="google-site-verification" content="TKX_pOy2xIBzJRFjAERH7c-3Sa9vZPVPLS7pxJ6PW_Y" />
-    <meta name="description" content="Каталог нашего сайта - это широчайший выбор мебели для дома. Стальные и межкомнатные двери по доступным ценам. Весь спектр моделей и бесплатная доставка. Бесплатный замер, консультация, самая недорогая установка по Витебску. Выбирайте нашу продукцию на официальном сайте компании">
+    <meta name="description" content="Каталог нашего сайта - это широчайший выбор мебели для дома. Стальные и межкомнатные двери по доступным ценам. Фурнитура для межкомнатных дверей. Окна ПВХ. Весь спектр моделей и бесплатная доставка. Бесплатный замер, консультация, самая недорогая установка по Витебску. Выбирайте нашу продукцию на официальном сайте компании">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script><title>Всё для вашего дома - компания team belchik официальный сайт</title>
