--- a/release/ClientApp/public/index.html
+++ b/release/ClientApp/public/index.html
@@ -58,4 +58,21 @@
   
       gtag('config', 'AW-686329999');
   </script>
+  <script>
+    $('.carousel.carousel-multi-item.v-2 .carousel-item').each(function(){
+  var next = $(this).next();
+  if (!next.length) {
+    next = $(this).siblings(':first');
+  }
+  next.children(':first-child').clone().appendTo($(this));
+
+  for (var i=0;i<4;i++) {
+    next=next.next();
+    if (!next.length) {
+      next=$(this).siblings(':first');
+    }
+    next.children(':first-child').clone().appendTo($(this));
+  }
+});
+  </script>
 </html>
