--- a/release/ClientApp/public/index.html
+++ b/release/ClientApp/public/index.html
@@ -11,12 +11,12 @@
       href="../src/assets/css/bootstrap.min.css"
     />
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
-<!--    <meta name="yandex-verification" content="b35ed3e455dabf56" />-->
+    <meta name="yandex-verification" content="08b215e9910825ee" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <meta name="keywords" content="двери витебск, входные двери витебск, dvok, двери экошпон, двери оптом, окна витебск, окна пвх, фурнитура, двери dvok">
-<!--    <meta name="google-site-verification" content="TKX_pOy2xIBzJRFjAERH7c-3Sa9vZPVPLS7pxJ6PW_Y" />-->
+    <meta name="google-site-verification" content="Uz1gEZvPp-xs79PiHbM8DuayvqdMKCpTVQklVH6Z-48" />
     <meta name="description" content="Каталог нашего сайта - это широчайший выбор мебели для дома. Стальные и межкомнатные двери по доступным ценам. Фурнитура для межкомнатных дверей. Окна ПВХ. Весь спектр моделей и бесплатная доставка. Бесплатный замер, консультация, самая недорогая установка по Витебску. Выбирайте нашу продукцию на официальном сайте компании">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
